--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   #provider
   provider: ^6.0.3
+  photo_view: ^0.12.0
 
 dev_dependencies:
   flutter_test:
